# gandi-dyn-dns

./: .gitignore  Cargo.toml  README.md  gandi-dyn-dns.example.toml
src/: cfg.rs  ipify.rs  livedns.rs  main.rs
