[package]
name = "gandi-dyn-dns"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
toml = "0.5"
clap = "2.33"
dirs = "3.0"
log = "0.4"
pretty_env_logger = "0.4"